Update VOCUS 2023-03-06 patch

--- a/_posts/2023-02-26-VOCUS-人文筆記-性犯罪裡的同意問題-the-definition-of-consent-in-sexual-crime.html
+++ b/_posts/2023-02-26-VOCUS-人文筆記-性犯罪裡的同意問題-the-definition-of-consent-in-sexual-crime.html
@@ -15,18 +15,13 @@ author: 無鴉片評論
 <div class="draft-block draft--p left">我因為這件事情獲得了許多社交光環，尤其是公司高層以及亞太辦公室，但我也因此終止（或被終止）了幾個可能可以深化的情誼，也因此失去了不少朋友。那時候很年輕，做了很多領導上的錯事，也沒有足夠好的談判能力在制度裡要到需要的東西。團隊的延續以及內容的深化兩件事我都沒有開創出夠好的 Vision &amp; Strategy，因此到最後我總有種無法評論這些創建的感覺：我究竟是從中獲得的私利比較多，還是真的有更公眾上的道德價值？</div>
 <div class="draft-block draft--p left">那之後我的個人閱讀裡多了許多討論性別、情色的科學研究、傳記以及文學，也把當初設定很保守的職場環境裡的性別問題開展，將場景變得更加廣泛，如過去的文章<a href="https://vocus.cc/article/601be368fd89780001d444f1" target="_blank" class="draft--a">聆聽基列的暗地密語：Margaret Atwood 使女後記《證詞》</a>，以及<a href="https://vocus.cc/article/610da0ccfd897800013e62ef" target="_blank" class="draft--a">翻開性掠食者完全操作手冊：Ronan Farrow《性掠食者與他們的帝國》</a>。這不能說是贖罪之路，但也有很大一部分是解決我對於自我的質疑，以及對於當初無法深化議題並找到下一步策略行動的反省。</div>
 <div class="draft-block draft--p left">而我在目前的工作中，有不少專案都是在處理社群網絡在行為上的誠信問題（integrity），尤其是非經同意的性內容。我作為生理女性，我的切點很有我自己的原生框架，但也正是因為這個很經典的性別角色讓我一直困擾於性侵犯罪中的「同意問題」：什麼樣的要件與脈絡才使性行為成為了性侵？而唯有這個問題有個基礎的共識，才有辦法推行到更廣泛的社群以及產品策略。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/bXo4AfHlg4Q"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/bXo4AfHlg4Q"></iframe></div>
 <div class="draft-block draft--p left">我前幾日在看到一位網友推薦了羅翔教授的演講，羅翔教授以法學的角度闡述了法律上對於性侵中的「同意」的推演。羅翔教授說得很好：</div>
 <blockquote class="draft-block draft--blockquote">因為一系列社會上的熱點案件，社會大眾跟法律界產生了巨大的割裂，這於是讓我去反思，也因此接觸到女權主義法學的一些觀念...1984 年女權主義法學家麥金農曾說：<span style="font-weight: bold; ">『人類社會中的一切兩性行為都是強姦。』</span>，這句話實在太刺耳了，但是刺耳，卻讓我反思我自己對於性侵案件是否存在偏見。</blockquote>
 <blockquote class="draft-block draft--blockquote">即便採取性別中立主義立法的美國，根據統計，統計數據顯示，性侵犯罪的被害人，九成以上，甚至九成九以上，都是生理女性。性侵犯罪是一個非常獨特的犯罪，它是人類社會中一性對另一性的一種欺凌。</blockquote>
 <div class="draft-block draft--p left">羅翔教授深入淺出，帶出了心理學上違背意志概念的缺陷、「不同意」的四大立場：最大限度反抗標準、合理反抗標準、不等於不（No means No）與肯定性同意規則（Yes means Yes），並且解釋這些原則背後的社會脈絡以及適用場景。我在法國求學第一年入學時也有看過校方藉由「是否要喝茶（Tea Consent）」對 Yes Means Yes 的概念宣達，然而回到脈絡裡理解演變，也是對這個人類古老問題以及社會經驗非常深切的反思。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/oQbei5JGiT8"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/oQbei5JGiT8"></iframe></div>
 <div class="draft-block draft--p left">如果讀者有時間，無論你的原生框架是什麼，我都建議花一點時間來聽聽羅翔教授的演講。我沈浸在社群中許久，我已經放棄了這些非合意性問題可以被解決的樂觀信念。但我對於覺察、意識以及普及教育的樂觀依舊是存在的：越多人願意直接面對人性與社會的黑暗面，就越能夠建立起深刻的同理環境，而足夠的同理環境也才能催生行為與制度的改變。這件事雖然急不來，但開始，是絕對來得及的。</div>
-<div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">可以從以下其他文章閱讀關於我的這些經歷與觀點：</div>
 <ul>
@@ -35,4 +30,3 @@ author: 無鴉片評論
   <li class="draft-block draft--li"><a href="https://vocus.cc/article/60794facfd89780001c145f7" target="_blank" class="draft--a">帝國只留下餘暉：花旗銀行撤出台灣市場的策略考量及後續影響</a></li>
   <li class="draft-block draft--li"><a href="https://vocus.cc/article/6371d58cfd8978000120fb3b" target="_blank" class="draft--a">Meta 大裁員下的倖存者</a></li>
 </ul>
-<div class="draft-block draft--p left"></div>
