--- a/_posts/2023-03-03-VOCUS-鈴芽之旅-跟女高中生一起解開心鎖.html
+++ b/_posts/2023-03-03-VOCUS-鈴芽之旅-跟女高中生一起解開心鎖.html
@@ -51,4 +51,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">雖然新海誠有在談論角色時，說明這次比較想把鈴芽與草太的關係建立在旅行伙伴上，但裡面還是可以看見男女情愫，甚至第一次見面就飛奔去找男人，把男人帶進家裡是什麼旅行夥伴，這部作品太關注在兩人公路旅行上遇到的人事物，和女主角最後收尾的伏筆，而導致在男女感情方面，可以說是歷代新海誠電影最差勁的局面，甚至給人強行湊對的感覺。</div>
 <div class="draft-block draft--p left">但以故事內容來說動作、冒險與女主角智商隨時在線的情況下，這部動畫展線的相當精彩，雖然電影開頭星空草原，就不免讓人想到新海誠有些失控的作品《追逐繁星的孩子》。</div>
 <div class="draft-block draft--p left">這次動畫《鈴芽之旅》幾乎是告別新海誠式苦戀，讓愛情一見鍾情便可，深化其他議題，然後以大場面、大動作劃下一般大眾可接受的結局。但有點遺憾如《言葉之庭》細膩愛戀作以後可能不常見了。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/-hAaJKKn56g"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/-hAaJKKn56g"></iframe></div>
