--- a/_posts/2023-03-04-VOCUS-3月2日生日書.html
+++ b/_posts/2023-03-04-VOCUS-3月2日生日書.html
@@ -22,8 +22,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">幸運物：</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">家：史詩航程的起點、極樂世界的根源、夢想沃土的實現，其實都從家裡開始。</span></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/0-vZIoAGpqU"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/0-vZIoAGpqU"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">生日巧克力：美式巧克力酥餅</div>
 <div class="draft-block draft--p left">就算雙魚是純水製成，沒有添加任何雜質的「高敏生物」，但其正直、忠誠、守信的性格就如同甜點屋櫃台上的巧克力，人見人愛，那怕明天會變胖……</div>
@@ -36,20 +35,15 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">誕生於昔日奧地利帝國哈布斯堡君主國利托米什爾（Litomyšl，今捷克境內），史麥塔納被譽為是西元十九世紀古典音樂浪漫主義與民族樂派主義發展時期東歐捷克（波西米亞裔）文化圈裡最偉大的音樂巨匠之一。</div>
 <div class="draft-block draft--p left">不若晚輩德弗札克（Antonín Dvořák）在新大陸（美國）的開花結果，史麥塔納作為音樂老師，亦是民族樂風的啟蒙，其不朽之處，乃在於除了創設愛國音樂組織，推廣本土藝術之外，<span style="font-weight: bold; ">甚至……參與了西元1848年捷克人爭取自主的布拉格革命運動，也就是「人民之春」（Spring of Nations）</span>，要求奧國承認捷克語和德語之間的平等地位！</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/3bb606c9-6415-46bf-9822-1429919fb00f.jpg" data-width="1920" data-height="834" data-position="center" src="https://images.vocus.cc/3bb606c9-6415-46bf-9822-1429919fb00f.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">即使革命功敗垂成，史麥塔納也隨著局勢緊張而遠走瑞典，但是人在異鄉擔任指揮工作的他，當看見奧國的政治氛圍逐漸捨棄專制獨裁，迎來和解對話後，他很快就回到故里，馬不停蹄地投入譜曲工作，同時創立愛國歌唱協會、民族劇院與本土藝術家組織，<span style="font-weight: bold; ">隻手開創出今天我們熟悉的捷克國民樂派，更讓原本侷限一地，奔放豪情之波西米亞音樂得以站上國際級舞台！</span></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/ca25253b-1f98-4e06-8614-34dbabff61f9.jpg" data-width="1796" data-height="1200" data-position="center" src="https://images.vocus.cc/ca25253b-1f98-4e06-8614-34dbabff61f9.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">50歲那年，操勞過度的史麥塔納因患病而失聰，可是他此時似乎忘卻了肉體的苦楚，反而再接再厲，譜出了更多的精采旋律，<span style="font-weight: bold; ">失言在倒下之前燃燒所有殘存的氣力</span>……一甲子，不算長的人生軌跡，<span style="font-weight: bold; ">史麥塔納若被形容為捷克音樂一代宗師的話，我想是絕對沒有半點浮誇的。</span></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/CmHqslLbpyY"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/CmHqslLbpyY"></iframe></div>
 <div class="draft-block draft--p left">數算史麥塔納膾炙人口的代表作品，<span style="font-weight: bold; ">首推歌劇《被出賣的新娘》（Prodaná nevěsta）和交響詩《我的祖國》（Má Vlast）。</span></div>
 <div class="draft-block draft--p left">兩者都定稿於史氏晚年，也充分展露出東歐民族那千載以來，不斷受外邦侵踏門戶的濃厚歷史哀愁，亦融入了當地的傳說與異國民謠風情，尤其是《我的祖國》第二樂章《莫爾道河》（Vltava）……</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">以音寫景，以景訴情，以情說史、以史繪鄉、以鄉入音……</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">款款道出數以千萬去國遊子無法忘懷的波西米亞一草一木，那是母親的河、父親的家，更是流貫血液裡的家鄉魂！進一步，史麥塔納殷切盼望著捷克的獨立自主……失去聽力如他，只求民族早日建國！</span></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/IoSVGd6EPLE"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/IoSVGd6EPLE"></iframe></div>
 <div class="draft-block draft--p left">《我的祖國》首演之後，儼然已超越藝文聆賞之框架，成為捷克人百餘年來的國家精神象徵之一，故自西元1952年起，<span style="font-weight: bold; ">捷克官方特別選定5月12日作為「布拉格之春國際音樂節」（Prague Spring International Music Festival）的開幕日，當天也正是史麥塔納的忌日……</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">至於開場曲，毫無疑問，Má Vlast。</span></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/3e9d5972-97f1-4aad-95eb-02df1aa7736a.png" data-width="1200" data-height="630" data-position="center" src="https://images.vocus.cc/3e9d5972-97f1-4aad-95eb-02df1aa7736a.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
@@ -62,4 +56,3 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><a href="https://symbio.agency/work/prague-spring" target="_blank" class="draft--a">https://symbio.agency/work/prague-spring</a></div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Bed%C5%99ich_Smetana_Museum" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Bed%C5%99ich_Smetana_Museum</a></div>
 <div class="draft-block draft--p left"><a href="https://www.prague.eu/en/object/places/722/national-museum-bedrich-smetana-museum-muzeum-bedricha-smetany" target="_blank" class="draft--a">https://www.prague.eu/en/object/places/722/national-museum-bedrich-smetana-museum-muzeum-bedricha-smetany</a></div>
-<div class="draft-block draft--p left"></div>
