--- a/_posts/2023-03-05-INITIUM-一鮨入魂-但我工作到没有灵魂-omakase寿司仔自白.html
+++ b/_posts/2023-03-05-INITIUM-一鮨入魂-但我工作到没有灵魂-omakase寿司仔自白.html
@@ -5,13 +5,13 @@ date: 2023-03-05 15:00:00.000000000 +00:00
 link: https://theinitium.com/article/20230306-job-inside-out-omakase-boy/
 categories: initium
 tags: blog
-author: 艾迪
+author: 策划、撰文：艾迪
 ---
 
-<p>「我这样的“寿司仔”，其实更像是一位“海鲜屠宰及分割技术员”。在密闭的工作环境中，匠人精神有时成了剥削或自我剥削的说辞。」</p><p>艾迪</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230306-job-inside-out-omakase-boy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/4c15285677574502b6fb6c0a5bcf8ee3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「我这样的“寿司仔”，其实更像是一位“海鲜屠宰及分割技术员”。在密闭的工作环境中，匠人精神有时成了剥削或自我剥削的说辞。」</p><p>策划、撰文：艾迪</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230306-job-inside-out-omakase-boy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/4c15285677574502b6fb6c0a5bcf8ee3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit">插画：Mantha Mok</span></figcaption></figure><p><small>【编者按】“其实你返工有咩做㗎？”——这个问题，你有问过别人或被人问起吗？</small></p>
-<p><small>这个来自日常的问题，启发我们开启“返工到底是什么事”这个新栏目。在当代社会，工作主宰我们的生活，既定义个人的身份，亦维系社会的“正常”运转，但在“隔行如隔山”的区隔中，我们并不容易看见彼此——从恒常的工作劳动，到行业内的语言词汇、职场文化、人际关系、性别分工、权力层级以至价值体系。借此栏目，我们希望打破边界，深入聆听多位“打工仔”的行业见闻，不但走进社会各行业的“贴地”日常，亦从职业的视角观照当代社会的切面和现象。</small></p>
-<p><small>本文我们将走进“寿司仔”的工作世界。在香港的饮食资讯网搜索“寿司”食店，全港共有超过1600间，当中，近年大受欢迎的Omakase（厨师发办）有逾250间。我们采访一位Omakase名店的年轻“寿司仔”，根据访问内容整理成第一人称自述，讲述他的入行经历、厨房工作的日常、Omakase饮食文化的奥妙，以及长工时的饮食业如何压榨个人的生活和精神状态。</small></p>
+<p><small>这个来自日常的问题，启发我们开启“返工这回事”这个新栏目。在当代社会，工作主宰我们的生活，既定义个人的身份，亦维系社会的“正常”运转，但在“隔行如隔山”的区隔中，我们并不容易看见彼此——从恒常的工作劳动，到行业内的语言词汇、职场文化、人际关系、性别分工、权力层级以至价值体系。借此栏目，我们希望打破边界，深入聆听多位“打工仔”的行业见闻，不但走进社会各行业的“贴地”日常，亦从职业的视角观照当代社会的切面和现象。</small></p>
+<p><small>本文我们将走进“寿司仔”的工作世界。在香港的饮食资讯网搜索“寿司”食店，全港共有超过1600间，当中，近年大受欢迎的Omakase（厨师发办）有逾250间。我们采访一位Omakase名店的年轻“寿司仔”阿俊（化名），根据访问内容整理成第一人称自述，讲述他的入行经历、厨房工作的日常、Omakase饮食文化的奥妙，以及长工时的饮食业如何压榨个人的生活和精神状态。</small></p>
 <h2>深夜11点的面试是怎样的？</h2>
 <p>在大学的人文学科毕业后，我最初并非投身饮食业，而是公民团体，但因为近年香港政治气候突变，整个行业面临结构性失业。我仍想在这座城市生活，于是努力发掘自己还有哪些谋生技能，务求不饿死自己。最后，我决定试下做饮食业，并且是日本餐厅。为何情有独钟日本餐厅？其实香港饮食业无论是茶餐厅、中菜、西餐还是日本料理对的肉体的苛索和工时假期待遇都一样差，但日本餐和西餐的团队通常比较年轻，不像中餐厅那样由一群大叔领衔，所以我就选择日式餐厅，起码容易倾到计（谈得来）嘛。</p>
 <p>很多人以为，著名的日本食店门府深严，要好像武侠小说那样拜师学艺，或者认识人有门路，甚至读厨艺学院出身才可进去。但事实上，像很多蓝领工一样，我是在芸芸饮食业Whatsapp群组和Facebook群组找到这份工作。这些群组每天都有大量俗称“蛇头”（招聘中介）的人在招揽伙计，上面通常不会“明刀明枪”写明什么餐厅在请人，而是简单列出：XX（地区）请XX（菜系）的XX（职位），人工XX钱，假期X日，经验XX，有意电话XXXXXXXX。</p>
