--- a/_posts/2023-03-05-INITIUM-早报-李克强作政府工作报告-中国今年经济增长目标为5-左右.html
+++ b/_posts/2023-03-05-INITIUM-早报-李克强作政府工作报告-中国今年经济增长目标为5-左右.html
@@ -12,7 +12,7 @@ author:
             <figcaption itemprop="caption">2023年3月5日，北京人民大会堂，中国国务院总理李克强在第十四届全国人民代表大会第一次会议开幕式上作工作报告后向代表们鞠躬。<span class="credit">摄：Lintao Zhang/Getty Images</span></figcaption></figure><h3>李克强作政府工作报告，中国今年经济增长目标为5%左右</h3>
 <p>中国第十四届全国人民代表大会第一次会议周日在北京召开，即将离任的国务院总理<a href="https://www.reuters.com/world/china/chinas-economy-government-revamp-focus-parliament-set-open-2023-03-04/">李克强在政府工作报告中表示</a>，今年国内生产总值（GDP）增长目标为5%左右。</p>
 <p>去年中国经历了严格“防疫”管控、房地产业萧条以及私营企业遭受打击，官方通报经济仅增长3%，为数十年以来最低。</p>
-<p><a href="http://www.gov.cn/xinwen/2023-03/05/content_5744736.htm">李克强在报告中还表示</a>，今年城镇新增就业目标为1200万人——去年目标为1100万人，实际新增就业1206万人；今年城镇调查失业率目标为5.5%左右——去年目标为5.5%以内，去年年末降到了5.5%；今年军费预算增加7.2%，比去年增加7.1%略大；今年预算赤字目标为国内生产总值的3.0%，比去年2.8%左右的目标更大。</p>
+<p><a href="http://www.gov.cn/xinwen/2023-03/05/content_5744736.htm">李克强在报告中还表示</a>，今年城镇新增就业目标为1200万人——去年目标为1100万人，去年实际新增就业1206万人；今年城镇调查失业率目标为5.5%左右——去年目标为5.5%以内，去年实际年末才降到5.5%；今年军费预算增加7.2%，比去年增加7.1%略大；今年预算赤字目标为国内生产总值的3.0%，比去年2.8%左右的目标更大。</p>
 <p><a href="https://economy.caixin.com/2023-03-05/102004737.html">其他目标还包括</a>：居民消费价格涨幅3%左右；居民收入增长与经济增长基本同步；进出口促稳提质，国际收支基本平衡；粮食产量保持在1.3万亿斤以上；等等。</p>
 <p>本次全国人大会议会期至5月13日，会议将产生中国未来五年的新一届政府。</p>
 <h3>联合国历史性达成《公海条约》</h3>
