--- a/_posts/2023-03-06-INITIUM-温州人李强履新国务院总理-会成为民营经济的守护者吗.html
+++ b/_posts/2023-03-06-INITIUM-温州人李强履新国务院总理-会成为民营经济的守护者吗.html
@@ -15,7 +15,7 @@ author: 端传媒记者 陈阿烟 发自新加坡
 
 <h2>忠诚的幕僚</h2>
 <p>1959年7月，李强出生于浙江省温州市瑞安县，他成长于文化大革命时期，成年后当过工人。中国恢复高考后，李强在浙江农业大学宁波分校学习农业机械化。</p>
-<p>与中国前四任总理不同的是，李强非技术官僚出身，而有更多的“基层经验”。李鹏曾留学于苏联，朱镕基、温家宝分别毕业于清华大学和北京大学，这三任总理都是“红色工程师”。于今年两会将正式卸任的李克强则是文科出身，毕业于北京大学法律系和经济学院，师从一周前刚刚去世的经济学家厉以宁。</p>
+<p>与中国前四任总理不同的是，李强非技术官僚出身，而有更多的“基层经验”。李鹏曾留学于苏联，朱镕基、温家宝分别毕业于清华大学和北京地质学院（现中国地质大学），这三任总理都是“红色工程师”。于今年两会将正式卸任的李克强则是文科出身，毕业于北京大学法律系和经济学院，师从一周前刚刚去世的经济学家厉以宁。</p>
 <p>李强在1983年加入中国共产党，先后在基层共青团系统、浙江省民政厅工作。1996年，李强担任浙江省永康市委书记，成为一名县级市的市委书记——习近平也在正定县当过县委书记，他对基层的工作经验情有独钟。</p>
  
  
