--- a/_posts/2023-03-06-INMEDIA-七欖男子港隊與英法烏同組-姚錦成稱有信心至少贏一場.html
+++ b/_posts/2023-03-06-INMEDIA-七欖男子港隊與英法烏同組-姚錦成稱有信心至少贏一場.html
@@ -16,8 +16,8 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8r4G4Bv3w4" title="姚錦成"><img src="https://live.staticflickr.com/65535/52729700704_54da8e7cb4_b.jpg" width="1024" alt="姚錦成" /></a><br /><em>姚錦成</em></p>
 <p><strong>姚錦成：四對烏拉圭未贏過 英國隊尚在磨合 </strong></p>
 <p>早前表明最後一次出戰香港七欖的35歲男子隊成員姚錦成說，對分組結果「幾開心」，有信心可贏至少一場，尤其想贏烏拉圭，「我哋對壘過四次都未贏過佢，其實我哋實力都唔係相差好遠，我哋好固執地想贏返佢哋」。姚又指，留意到英國隊內部尚在磨合，加上英國隊剛換新教練，「好期待有啲surpirse對到佢哋，亦都有機會希望贏到」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/31cqn95f4r" title="葉念殷"><img src="https://live.staticflickr.com/65535/52729700669_3919874b8b_b.jpg" width="1024" alt="葉念殷" /></a><br /><em>葉念殷</em></p>
-<p><strong>葉念殷：四年未入大球場 冀與世界級球隊較量</strong></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/31cqn95f4r" title="葉念殷"><img src="https://live.staticflickr.com/65535/52729700669_3919874b8b_b.jpg" width="1024" alt="葉念殷" /></a><br /><em>李念殷</em></p>
+<p><strong>李念殷：四年未入大球場 冀與世界級球隊較量</strong></p>
 <p>今屆亦新增女子組賽事，共有12隊參賽。A組為紐西蘭、加拿大、英國及香港；B組為澳洲、斐濟、愛爾蘭及巴西；C組為美國、法國、日本及西班牙。</p>
-<p>女子隊隊長葉念殷表示，之前從未與紐西蘭、加拿大及英國正式對壘過，並提到上一次在大球場出賽已是2018年，期待再在主場挑戰世界級的球隊，形容是一個難得的機會。</p>
+<p>女子隊隊長李念殷表示，之前從未與紐西蘭、加拿大及英國正式對壘過，並提到上一次在大球場出賽已是2018年，期待再在主場挑戰世界級的球隊，形容是一個難得的機會。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
