--- a/_posts/2023-03-07-PQ-三八婦女節前夕-婦女新知提十大性別政見-籲政黨應支持更多女性參選.html
+++ b/_posts/2023-03-07-PQ-三八婦女節前夕-婦女新知提十大性別政見-籲政黨應支持更多女性參選.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-1024x473.png" alt="" class="wp-image-129011" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>婦女新知基金會在三八婦女節前夕，向未來的總統候選人提出包括縮減性別薪資差距等「十大性別政見」，督促候選人承諾當選後以實際行動消除性別不平等／圖：報呱記者林志鴻攝。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-1024x473.png" alt="" class="wp-image-129011" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/d8dbecfa-未命名設計-18.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>婦女新知基金會在三八婦女節前夕，向未來的總統候選人提出包括縮減性別薪資差距等「十大性別政見」，督促候選人承諾當選後以實際行動消除性別不平等／圖：報呱記者林志鴻攝。</figcaption></figure></div>
 
 
 
