--- a/_posts/2023-03-06-VOCUS-對日本廠商的作風不夠了解嗎-聽到-這句話-代表你跟日本客戶的關係穩了.html
+++ b/_posts/2023-03-06-VOCUS-對日本廠商的作風不夠了解嗎-聽到-這句話-代表你跟日本客戶的關係穩了.html
@@ -8,4 +8,22 @@ tags: blog
 author: 你的英日語自學導師 ོꦿ༄譯꧁難忘꧂
 ---
 
-<p><br></p>
+<p>經營日本客群是一個要放長線的長期戰，三年、五年甚至十年起跳的關係培養都是常態。如果日本客戶透露願意深入了解你並分享未來事業計畫，別輕易當作客套話將對方放手，你的大好機會或許來敲門了！</p>
+<h3>「日本人的想法好難懂啊」</h3>
+<p>這是我最常聽到台灣同事和廠商說的一句話。日本人做生意的規矩和台灣真的很不一樣，他們表達方式很曖昧。對我們台灣人來說，日本客戶講話像隔了一層紗似的，讓我們感覺不夠直接明瞭，所以通常不會在一次談話中就能得到夠滿意的答案，也因為如此，有些台灣廠商不願意做日本市場，因為要花費的時間成本遠比做歐美市場多得多。</p>
+<p>例如日本人常無意間在句尾加上「是吧？」「可能吧？」「會吧？」「或許吧」等等語尾詞，或是講了一段話之後，又突然說「但是呢….」來個轉折，對台灣人來說，聽到最後反而不知日本人到底是要或不要。這就是日文的特色──「曖昧」，讓不少台灣人感到困擾，覺得日本人的想法難懂。有人說，聽日本人講話別只聽前頭或聽一半就妄自下結論，一定要從頭聽到尾。我自己的習慣是，聽完日本客戶的發言，我會再透過問句請他們確認最終意願。</p>
+<p>如果幸運的話，他們會意識到你希望獲得明確答覆，進而給你確切的「要」或「不要」。若運氣不好(其實大部分的狀況是如此)，他們會說「需要時間考慮」，考慮的時間可長可短，一周到一個月以上都有可能。聽到這句話，有些台灣廠商(包括我同事)可能會跳腳，心想「怎麼來洽談之前，心理不先有個底呢！？真浪費時間好沒效率。」但為什麼會有這種狀況呢？</p>
+<p>某次我也和某日本客戶遇到前述的狀況，我忍不住探詢了原因，客戶說日本企業做生意有一套習慣的SOP(流程)。面對配合的廠商，他們會想要「先問全盤了解對方的背景，以及所有可採用的選項後，再來做整體的決策」。這代表他們會在溝通時詢問很多問題，而且不主動告訴對方詢問的動機，問完可能會說「我們再內部討論考慮看看（また内部で検討します）」，不會在當下給答案，接著就離開了。結果造成對方被問得一頭霧水，心想：「日本人問那麼多到底要幹嘛？到底是有沒有意願？」</p>
+<p>這位日本客戶對我說，他是代表社長，把所有對我公司的疑惑全部問一遍，收集完我所有的答覆後，他再透過內部會議彙報給社長和其他主管來定奪。我問他內部會議要開多久才會有結論，他說「不確定，久的話可能要一個月」。我馬上提醒他期限只剩一周，時間不多了，他說「我不能保證來得及，因為這是我們公司必走的流程。若沒有全盤了解貴公司的背景以及我們將面臨的狀況，我們是不會下決策的。」當下我給他的回覆是一同以一周為目標，若實在來不及，再由我方提出解決方案(解套)來客製化配合他的需求。幸好他知道我方的急迫性，最終趕上了期限。</p>
+<p>讀到這裡，大家應該能了解日本企業的做事風格與背後的原因，這也是為何有台灣廠商認為日本企業行事較保守。當然，並非所有日籍企業都是如此。</p>
+<h3>若能用日文溝通，就不以英文為主要媒介</h3>
+<p>我同事會說簡易的英文，與一家日本客戶談合約全程用英文透過信件溝通，但過程很辛苦，因為同事用台式英文與日本客戶的日式英文溝通，中間容易產生誤會。最後，我居中幫他們協調，日本客戶認為我同事沒看懂他的英文信，訊息傳達的效率不好。不久發生了有趣的現象，日本客戶開始跳過我同事直接向我聯繫。為什麼會這樣呢？</p>
+<p>當然，其中一個原因是日本人和台灣人所講的英文，在邏輯上本就大相逕庭，代溝是很容易發生的，例如日本人講claim（クレーム），你查英文字典明明意思是「聲明」，但日本人的意思卻是「客訴、抱怨」；又或者台灣人說local king，日本人不會想到吳宗憲。</p>
+<p>另一個原因，如同前述，日式英文的特色是講法很曖昧，承襲了日文本身的特色，講白就是受到日文表達方式的影響。例如我同事遇到的狀況，就是發了很多次電子郵件，不斷詢問客戶的最終意願，但一直要不到確切的答覆。這時我同事就納悶了，開始懷疑日本人是否根本看不懂英文信所表達的訊息或是搞不清楚狀況。另一方面，日本人也納悶了，心想明明都有在信中交代目前暫無答覆了，為何我同事就是沒聽懂意思。</p>
+<p>其實，歸納我接觸過的日本廠商，他們有一大共通點：能盡量少用英文就盡量不用。一旦他們得知對方有人會講日文，他們寧可透過日文來溝通。這也是為何許多透過我尋找台灣廠商的日本人，他們開出的第一條件就是「對方的聯絡窗口一定要會說流利日文，否則不納入優先合作對象。」所以我衷心建議，尋找日文專才來開拓日本市場，否則透過英文打開日本市場的困難度相對較高。</p>
+<h3>一句話，代表日本人想與你做長久夥伴</h3>
+<p>多年來，其中有一位日本廠商令我印象深刻。第一年接觸他時，他的回應很冷淡，當時僅是零星合作，而且都是由我主動提案，他有興趣才會回信接受合作，否則會已讀不回。但每次合作時，我方都以最完善的態度服務他的需求。直到第9年左右，他開始想找台灣以及歐美廠商，正巧我公司能居中牽線，因此他的反應變得很熱絡。</p>
+<p>某天他寫信向我公司提出視訊會面（Web面談）的需求，他說：「我想與貴司談談我公司的事業發展構想」。我同事們聽到覺得不可思議，要談也是來談訂單和簽約，怎麼會來談這種事，這不是他們自己的家務事嗎？但我的觀察和想法不同。如果你能吸引日本廠商願意敞開心防，分享他們的事業策劃，那代表他們可能已經看中你了！所謂的「想跟你談事業策劃」，其實言下之意是他們有疑問、有需求、有想法，想與你一起磋商，摸索出長期合作模式，另一方面，他們也想透過面談更深入了解你的背景。</p>
+<p>他在視訊會議中的態度也有很大轉變，直接明確表達「我想與貴司成為能持續多年的親密夥伴」。我詢問原因，他說這段時間以來我方服務很熱誠，為他們帶來了實質效益，他感受到了，他也表示未來與他們簽約會更頻繁，每次有牽線的需求都會固定找我方。</p>
+<p>事實上在日本人的世界，有所謂的社交「外圈」與「內圈」。在圈圈內的就是自己人，是固定合作且不會更動的合作對象(除非有特殊狀況)。只要你能打入內圈，就贏得了長期固定來源的飯票。</p>
+<p>所以做日本市場要有長期作戰的心理準備，你會需要不斷找機會推廣和發揮自己的優勢說服對方。當你能深入打開日本廠商的心防，他們將會是你不易流失的合作夥伴。</p>
