--- a/_posts/2023-03-08-INITIUM-2023奥斯卡赌局-港台中影评人看-最佳导演-花落谁家.html
+++ b/_posts/2023-03-08-INITIUM-2023奥斯卡赌局-港台中影评人看-最佳导演-花落谁家.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2023奥斯卡赌局：港台中影评人看“最佳导演”花落谁家？
+title: "【2023奥斯卡赌局】港台中影评人看“最佳导演”花落谁家？"
 date: 2023-03-08 05:45:00.000000000 +00:00
 link: https://theinitium.com/article/20230308-culture-oscar-2023-best-director/
 categories: initium
@@ -11,8 +11,8 @@ author:
 <p>「相较其他更工整作品，《妈的多重宇宙》更多是用视觉和想象力遮盖了剧本和逻辑上的诸多问题?」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230308-culture-oscar-2023-best-director/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/06663e3e3e4c4881bc35546dd358bb58.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《奇异女侠玩救宇宙》剧照。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">《奇异女侠玩救宇宙》剧照。<span class="credit">图：网上图片</span></figcaption></figure><p>【编者按】好不容易熬过疫情，观众却已被网络分食改变了去剧院的习惯？电影工业全球发展过去一年中谁沉谁浮，今春战况如何？第95届奥斯卡金像奖颁奖典礼将于东八区3月13日星期一早举行。</p>
 <p>在世代更替与价值取向不断变化之时，奥斯卡总是站在前排，最先抵受行业及舆论的压力。今年是学院首位华裔主席（杨燕子，Janet Yang）主持下的奥斯卡评选，在多元价值，同工同酬，#metoo，反暴力及种族平等这些议题的巨浪前面，学院还可以从容改革，正视现实吗？</p>
-<p>端传媒文化组制作特别专题“2023奥斯卡赌局”，以“端”之跨域视角，广邀中国、香港、台湾、马来西亚影评人，就重要奖项入围作品，按照最可能得奖至最不可能得奖，投票打分，秉心预测，再点评影评人认为最可能得奖与最可能抱憾之作。近日刊出是“最佳导演”奖项赌局预测，有香港影评人李照兴、台湾影评人郑秉泓、来自中国大陆现在巴黎的Élise坐阵。</p>
-<p><small>文中电影及人名，首次出现附原文，译名尊重作者所在地域翻译习惯会有不同。</small></p>
+<p>端传媒文化组制作特别专题“2023奥斯卡赌局”，以“端”之跨域视角，广邀中国、香港、台湾、马来西亚影评人，就重要奖项入围作品，按照最可能得奖至最不可能得奖，投票打分，秉心预测，再点评影评人认为最可能得奖与最可能抱憾之作。今日刊出是“最佳导演”奖项赌局预测，有香港影评人李照兴、台湾影评人郑秉泓、来自中国大陆现在巴黎的Élise坐阵。</p>
+<p><small>文中电影及人名，首次出现附原文，译名尊重作者所在地域翻译习惯或有不同。</small></p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230308-culture-oscar-2023-best-director/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/8ad68e47ca4c4fccb9022e5aeb6207b1.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
