--- a/_posts/2023-03-07-PQ-失控的資訊控制狂-中國如何透過軟硬體監控全球.html
+++ b/_posts/2023-03-07-PQ-失控的資訊控制狂-中國如何透過軟硬體監控全球.html
@@ -84,6 +84,12 @@ author: 艾格姆
 
 
 
+<figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+<iframe loading="lazy" title="非洲人翻唱【一剪梅】Xue Hua Piao Piao 太好听了" src="https://www.youtube.com/embed/w9cngtAe7XY?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div></figure>
+
+
+
 <h2>內容篩選的威力</h2>
 
 
