--- a/_posts/2023-03-08-INMEDIA-亂拋垃圾店舖阻街罰款加辣-環境局指八成公眾贊成.html
+++ b/_posts/2023-03-08-INMEDIA-亂拋垃圾店舖阻街罰款加辣-環境局指八成公眾贊成.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20230308v.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>李家超政府連續多月打擊衞生黑點，早前更提出將破壞市容罪行的定額罰款將大幅提升，例如亂拋垃圾定額罰款由1,500元倍增至3,000元，店鋪阻街更升3倍至6,000元。環境及生態局公布公眾諮詢結果，稱逾八成人同意有需要提高罰款。環境局無計劃修訂定額罰款金額，但再就5類行為調高法庭可判罰款，例如公地方吐痰，一旦被告上法庭，首次定罪可罰1萬，再犯可罰2.5萬元。</p>
+<img src="https://www.inmediahk.net/files/column_images/20230308v.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>李家超政府連續多月打擊衞生黑點，早前更提出將破壞市容罪行的定額罰款將大幅提升，例如亂拋垃圾定額罰款由1,500元倍增至3,000元，店鋪阻街更升3倍至6,000元。環境及生態局公布公眾諮詢結果，稱逾八成人同意有需要提高罰款。環境局無計劃修訂定額罰款金額，但再就5類行為調高法庭可判罰款，例如公眾地方吐痰，一旦被告上法庭，首次定罪可罰1萬，再犯可罰2.5萬元。</p>
 <p>局方預計最快今年第二季向立法會提交有關修訂條例草案，若草案在今年中獲立法會通過，新措施最快在今年第四季生效。</p>
 <p><strong>一個月收1,662份意見</strong></p>
 <p>公眾諮詢期在去年12月19日展開，維期一個月，在環境及生態局提交立法會的<a href="https://www.legco.gov.hk/yr2023/chinese/panels/fseh/papers/fseh20230314cb2-191-5-c.pdf">文件</a>，局方共收到1,662份意見書，82.7%人認為要提高影響公眾地方潔淨及阻街罪行的定額罰款，只有17%市民不同意。</p>
