--- a/_posts/2023-03-07-PQ-失控的資訊控制狂-中國如何透過軟硬體監控全球.html
+++ b/_posts/2023-03-07-PQ-失控的資訊控制狂-中國如何透過軟硬體監控全球.html
@@ -44,7 +44,11 @@ author: 艾格姆
 
 
 
-<p>波蘭和其他歐洲國家已將物聯網合約授予中國公司，例如監視器巨頭海康威視。中國製造的監視器系統甚至有被用於歐洲和北美的官方建築，包括英國政府部門和美國軍事基地，不過目前英美等國政府已有禁用中國設備。2019 年，美國政府將海康威視和其他幾家中國公司列入貿易黑名單。但美國的這些行動似乎也沒有阻止這些中國公司在全球擴張。</p>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/7dcad104-20230308095133-0dc79094f7bc6115e645645b0dde1e30-tablet.jpg" alt="" class="wp-image-129260" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/7dcad104-20230308095133-0dc79094f7bc6115e645645b0dde1e30-tablet.jpg 640w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/7dcad104-20230308095133-0dc79094f7bc6115e645645b0dde1e30-tablet-300x186.jpg 300w" sizes="(max-width: 640px) 100vw, 640px" /><figcaption>南韓媒體《JTBC NEWS》和《KBS News》自 3 月 6 日起有多則關於首爾江南區某醫美診所內監視器所拍下影片流出的報導，指稱駭客從 2 月 24 日開始拍攝到 28 日共 5 天。這些影片內容不乏數名韓國知名藝人到診所諮詢畫面，還清楚拍到患者臉部特徵、裸身接受檢查與整形手術等畫面，被放到中國的色情網站傳播。<br>韓國警方初步調查認為，診所的監視器遭駭客透過網路監控診所天花板上的攝影機拍攝。經確認，該診所安裝的監視器是中國海康威視（Hikvision）的產品，該 IP 攝影機可與網路相連，中國製的產品安全性薄弱，駭客可輕易入侵。<br>圖／翻攝自搜狐網</figcaption></figure></div>
+
+
+
+<p>波蘭和其他歐洲國家已將物聯網合約授予中國公司，例如監視器巨頭海康威視。中國製造的監視器系統甚至有被用於歐洲和北美的官方建築，包括英國政府部門和美國軍事基地，不過目前英美等國政府已有禁用中國設備。2019 年，<strong>美國政府將海康威視和其他幾家中國公司列入貿易黑名單</strong>。但美國的這些行動似乎也沒有阻止這些中國公司在全球擴張。</p>
 
 
 
