--- a/_posts/2023-03-08-PQ-歐獨立媒體分析歐洲議會投票行為-蒲亭主義政客現形.html
+++ b/_posts/2023-03-08-PQ-歐獨立媒體分析歐洲議會投票行為-蒲亭主義政客現形.html
@@ -24,7 +24,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-1024x710.jpg" alt="" class="wp-image-129196" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-1024x710.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-300x208.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-768x532.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>德國另類選擇黨經常就反俄羅斯議案投下明確的反對票（圖／Ziko van Dijk／CC BY-SA 3.0）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-1024x710.jpg" alt="" class="wp-image-129196" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-1024x710.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-300x208.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）-768x532.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/3b143341-德國另類選擇黨（圖／ziko-van-dijk／cc-by-sa-3.0）.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>德國另類選擇黨經常就反俄羅斯議案投下明確的反對票（圖／Ziko van Dijk／CC BY-SA 3.0）</figcaption></figure>
 
 
 
