--- a/_posts/2023-03-09-INMEDIA-李卓人妻子鄧燕娥-赤柱監獄外被國安處人員拘捕.html
+++ b/_posts/2023-03-09-INMEDIA-李卓人妻子鄧燕娥-赤柱監獄外被國安處人員拘捕.html
@@ -9,8 +9,8 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/202303091.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>資料圖片</em></p>
-<p><font color="red">【獨媒報導】</font>警方國安處人員今午在赤柱監獄外拘捕一名女子，該名女子是前職工盟秘書長李卓人妻子鄧燕娥。《獨媒》已向警方查詢詳情。</p>
+<p><font color="red">【獨媒報導】</font>警方國安處人員今午在赤柱監獄外拘捕一名女子，該名女子是前職工盟秘書長李卓人妻子鄧燕娥。《獨媒》已向警方查詢詳情。消息指鄧燕娥涉嫌觸犯《港區國安法》「勾結境外勢力危害國家安全」罪。</p>
 <p>《文匯報》報道，指鄧燕娥今日中午在赤柱監獄外遭國安處人員拘捕。報道中影片可見，鄧燕娥被五名人員帶上一輛七人車。</p>
 <p>李卓人涉及支聯會煽動顛覆國家政權案，現正在赤柱監獄還柙。<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E6%94%AF%E8%81%AF%E6%9C%83%E5%89%8D%E4%B8%BB%E5%B8%AD%E6%9D%8E%E5%8D%93%E4%BA%BA%E7%94%B3%E4%BF%9D%E9%87%8B%E9%81%AD%E6%8B%92-%E5%BA%AD%E4%B8%8A%E6%8A%AB%E9%9C%B2%E5%8E%BB%E5%B9%B4%E8%B3%A3%E6%A8%93%E3%80%81%E5%A6%BB%E5%AD%90%E8%B5%B4%E8%8B%B1-%E5%AE%98%E4%B8%8D%E4%BF%A1%E4%B8%8D%E5%86%8D%E5%8D%B1%E5%9C%8B%E5%AE%89">李卓人去年12月曾向高等法院申請保釋被拒</a>，庭上披露鄧燕娥任職國際家務工聯會（International Domestic Workers Federation）總幹事，當時正在英國居住及工作。《國安法》指定法官陳慶偉當時指，李卓人放棄其自住物業，家人亦離開香港，本地連繫減少，未能信納他承諾不再危害國家安全。</p>
-<p>據了解，曾任職工盟總幹事的鄧燕娥，她在2021年9月職工盟解散期間已離開香港，於早前回港。當時她亦曾遭建制媒體點名，指其出任董事的「亞洲專訊資料研究中心」（Asia Monitor Resource Centre）接受外國資助約1.18億，該中心同於2021年9月關閉。</p>
+<p>據了解，曾任職工盟總幹事的鄧燕娥，她在2021年9月職工盟解散期間已離開香港，於早前回港。當時她亦曾遭建制媒體點名，指其出任董事的「亞洲專訊資料研究中心」（Asia Monitor Resource Centre）接受外國資助約1.18億，該中心同於2021年9月關閉，並<a href="https://www.facebook.com/AMRCHK/posts/pfbid02Wu3Mk8mg9c6NKE2ZZ2FA9CB6p1ieuzZXiegK5vseY2X7sZm5aCYK3d6chg18SGYDl">曾發聲明</a>指《大公報》的報導失實。聲明指中心成立於1968年，關注亞洲各國基層勞工權益，不從屬於任何本地或海外機構。惟中心感受到在香港的運作壓力，別無選擇停止運作，並另覓其他地方服務亞洲工人。</p>
 </div></div></div>
