--- a/_posts/2023-03-09-INMEDIA-葵涌垃圾房畫作消失-承辦商派經理駐場-華哥-自行收起.html
+++ b/_posts/2023-03-09-INMEDIA-葵涌垃圾房畫作消失-承辦商派經理駐場-華哥-自行收起.html
@@ -11,7 +11,7 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/202303095psd.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>葵涌邨垃圾房化身「社區畫廊」多年，但畫作日前在網上廣傳不久後，並被全數移除。佈置畫作的「策展人」、清潔工華哥日前向傳媒表示是房署下令拆畫，昨日則改口稱是考慮到市民安全而暫存儲物房。《獨媒》今日再到場，承辦商派經理駐場，強調「唔關房署事」，華哥則表示日後或可再掛：「唔緊要啦！唔好多心啦，呢啲好閒嘅事。」</p>
 <p>本周在網上有專頁刊出多張葵涌邨垃圾房的照片，房內掛起的畫作引起熱烈討論，但畫作及後被移走。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/M14sR51Qhm" title="無標題"><img src="https://live.staticflickr.com/65535/52735641249_2c39026570_b.jpg" width="1024" alt="無標題" /></a></p>
-<p><strong>承辦商安排經理經理「駐守」強調「唔關房署事」</strong></p>
+<p><strong>承辦商安排經理「駐守」強調「唔關房署事」</strong></p>
 <p>《獨媒》今早到垃圾房視察，垃圾房牆上僅剩兩個時鐘，站內更有一名穿上西裝的承辦商經理「駐守」。該名經理對記者表示，由於近日打卡人數大增，為安全理由而決定暫時將畫作移至儲物房，日後再掛上，「日日咁多人行入嚟，又影響我哋做嘢又危險」。他重申「唔關房署事㗎，我哋清潔承辦商㗎咋嘛。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/cCe4H0Hww0" title="無標題"><img src="https://live.staticflickr.com/65535/52735866113_777ff301e7_b.jpg" alt="無標題" /></a><br /><em>承辦商經理</em></p>
 <p><strong>葵涌邨工作十多年 垃圾房內掛畫因「貪過癮」</strong></p>
