--- a/_posts/2023-03-11-PQ-加拿大研擬外國勢力代理人法-中國干預選舉醜聞誰從-中-獲利.html
+++ b/_posts/2023-03-11-PQ-加拿大研擬外國勢力代理人法-中國干預選舉醜聞誰從-中-獲利.html
@@ -28,7 +28,7 @@ author: 謝時
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08.jpg" alt="" class="wp-image-129477" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08-768x432.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>趙錦榮在2021年大選中，被中國微信圈的虛假信息鎖定，稱他是反華分子，批評「外國影響註冊法」會讓每一個來自中國的移民都受害。他在這屆選舉中連任失敗。<br>圖／趙錦榮提供／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08.jpg" alt="" class="wp-image-129477" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/68cd7445-a9af3b9603429e66e5d2ef38e845eb08-768x432.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>趙錦榮在2021年大選中，被中國微信圈的虛假信息鎖定，稱他是反華分子，批評「外國影響註冊法」會讓每一個來自中國的移民都受害。他在這屆選舉中連任失敗。<br>圖／趙錦榮提供／中央社</figcaption></figure></div>
 
 
 
