--- a/_posts/2023-03-11-PQ-劉以正-狗熊到英雄-效法美軍-翻轉國防敘事.html
+++ b/_posts/2023-03-11-PQ-劉以正-狗熊到英雄-效法美軍-翻轉國防敘事.html
@@ -82,7 +82,7 @@ author: 劉以正
 
 
 
-<p>2023 年 3 月多個社團號召 500 人黃埔校友前往中國，參加黃埔建校99年的校慶，黃埔軍官學校在1924 年受蘇俄扶持。當黃埔軍魂、孫中山等敘事的源頭都在中國，台灣軍隊在面對中國入侵時，中國敘事可能發揮的作用將是：都是中國人、被統一有何不可、投降亦不可恥、民進黨才是敵人.、中國才是未來&#8230;&#8230;等正當化自身的背叛。缺乏在地化、現代化的國防敘事，更不容易感動新一代的年輕人，凝聚集體共同感、榮譽感。當下處境，台灣應拋棄中國民族主義意識形態的黃埔敘事，重新建立一個以台灣認同為核心並與國際連結的國防敘事，才能讓台灣軍隊有清楚的敵我意識、堅強的抵抗意志，絕不投降的士氣。</p>
+<p>2023 年 3 月多個社團號召 500 人黃埔校友前往中國，參加黃埔建校99年的校慶（黃埔軍官學校在1924 年受蘇俄扶植而成立）。當黃埔軍魂、孫中山等敘事的源頭都在中國，台灣軍隊在面對中國入侵時，中國敘事可能發揮的作用將是：都是中國人、被統一有何不可、投降亦不可恥、民進黨才是敵人.、中國才是未來&#8230;&#8230;等正當化自身的背叛。缺乏在地化、現代化的國防敘事，更不容易感動新一代的年輕人，凝聚集體共同感、榮譽感。當下處境，台灣應拋棄中國民族主義意識形態的黃埔敘事，重新建立一個以台灣認同為核心並與國際連結的國防敘事，才能讓台灣軍隊有清楚的敵我意識、堅強的抵抗意志，絕不投降的士氣。</p>
 
 
 
