--- a/_posts/2023-03-13-PQ-反制中國滲透分化-經民連提三法修正草案.html
+++ b/_posts/2023-03-13-PQ-反制中國滲透分化-經民連提三法修正草案.html
@@ -20,7 +20,7 @@ author: 潘柏廷
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-1024x683.jpg" alt="" class="wp-image-129651" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>經濟民主連合研究員歐栩韶。圖／潘柏廷拍攝</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-1024x683.jpg" alt="" class="wp-image-129651" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/e93a3bd1-img_0825-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>經濟民主連合研究員歐栩韶。圖／潘柏廷拍攝</figcaption></figure></div>
 
 
 
