--- a/_posts/2023-03-14-INMEDIA-將藍新設經東隧巴士線-城巴首日以雙層電巴行走首班往中環班次.html
+++ b/_posts/2023-03-14-INMEDIA-將藍新設經東隧巴士線-城巴首日以雙層電巴行走首班往中環班次.html
@@ -10,8 +10,10 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/002_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>將軍澳—藍田隧道於去年12月通車後，巴士公司增設多條繁忙時間服務路線，惟不設過海服務。在地區爭取下，兩條繁忙時間服務的過海巴士線將於3月20日開辦，分別前往中區及東區。城巴新巴昨發出<a href="https://www.bravobus.com.hk/tc/uploadedPressRelease/20004_20230313_CHI.pdf">新聞稿</a>，指會安排旗下的內地威馳騰雙層電動巴士行走首航班次。</p>
 <p>將藍公路通車前，運輸署公布增辦五條行經將藍公路的巴士線，惟當中不設過海服務。多個地區人士不滿，認為未有善用將藍公路直達東隧口的優勢。有政團曾在通車後首個上班日，租用旅遊巴經將藍公路及東隧前往中環，<a href="//bit.ly/3VQ3d64">稱僅需時23分鐘</a>。及後運輸署及巴士公司研究增設過海線，並定於3月20日，開辦第690S號線（坑口至中環，九巴及城巴合辦）及第694S號線（調景嶺至小西灣，由新巴開辦），平日早上及下午繁忙時間各開出兩班。</p>
-<p>其中690S線，城巴新巴表示會安排旗下的內地威馳騰雙層電動巴士行走由該公司開出的首航班次，在早上8時05分由坑口明德邨開出，稱為「配合日出康城貫徹綠色生活的概念」。</p>
+<p>其中690S線，城巴新巴表示會安排旗下的內地威馳騰雙層電動巴士行走由該公司開出的首航班次，在早上8時05分由坑口明德邨開出，稱為「配合日出康城貫徹綠色生活的概念」。九巴則會負責第690S號線頭班，即早上7時50分班次。下午回程班次的開出時間則為6時05分及6時25分，九巴會負責尾班車。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9s8035b46F" title="image001"><img src="https://live.staticflickr.com/65535/52747400033_22f48f0f89_w.jpg" alt="image001" /></a></p>
 <p>運輸署早前曾表示，將於將藍公路通車一段時間段，進行第二階段公共交通服務調整，包括將部分行走將軍澳隧道的巴士線改經將藍公路。</p>
 <p><a href="https://bit.ly/3IsZya4">當局早前曾向立法會交代將藍公路通車後的車流變化</a>，顯示將軍澳隧道雖然車龍有所縮減，惟早上繁忙時間往九龍方向僅減少一成（約300架次），仍然超出其容量設計。</p>
-<p>港鐵將軍澳綫於2002年8月通車後，由於該綫直達北角，故令將軍澳過海隧巴路線客量急跌，原第691號線（坑口北至中環）及第693號線（尚德示中環）同月合併為第692號線（坑口北至中環），至2013年11月取消，只保留於平日早上繁忙時間的支線第692P號線（坑口北至中環），惟該線於2018年9月亦告取消。</p>
+<p><strong>原坑口及將軍澳南往中區巴士線取消近五年</strong></p>
+<p>港鐵將軍澳綫於2002年8月通車後，由於該綫直達北角，故令將軍澳過海隧巴路線客量急跌，原第691號線（坑口北至中環）及第693號線（尚德至中環）同月合併為第692號線（坑口北至中環），至2013年11月取消，只保留於平日早上繁忙時間的支線第692P號線（坑口北至中環），惟該線於2018年9月亦告取消。</p>
 </div></div></div>
