--- a/_posts/2023-03-14-INITIUM-阿姨不灭-台式-理容院-的人情与美学-电影-本日公休-专访.html
+++ b/_posts/2023-03-14-INITIUM-阿姨不灭-台式-理容院-的人情与美学-电影-本日公休-专访.html
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: 阿姨不灭：台式“理容院”的人情与美学 | 电影《本日公休》专访
+title: 阿姨不灭：台式“理容院”的人情与美学｜电影《本日公休》专访
 date: 2023-03-14 09:23:00.000000000 +00:00
 link: https://theinitium.com/article/20230315-culture-day-off-movie-taichung/
 categories: initium
 tags: blog
-author: 特约撰稿人 安卓 发自台北
+author: 特约撰稿人 孙志熙 发自台北
 ---
 
-<p>「《一代宗师》有白玫瑰理发厅，西门町有台北红玫瑰理发厅，但那些都是上海式，阿蕊学的，则是源自日本的美容院系统⋯⋯」</p><p>特约撰稿人 安卓 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230315-culture-day-off-movie-taichung/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/9007b5bd48b142bc816f05d6c1dff04b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月27日，台中，阿蕊理发店，阿蕊为黄先生剪发。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年2月27日，台中，阿蕊理发店，阿蕊为黄先生剪发。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p><small>【编者按】正在上映的台湾电影《本日公休》，讲述了台中一家经营四十载的男士家庭理发厅的故事。故事带出台湾独有的“理容院”文化，其由独特历史环境，而综合了中、日、欧混血的理容传统。我们访问了电影主人公的原型人物——今年74岁的理发师阿蕊（导演傅天余之母），连并影片的导演与美术指导，共同谈谈台式理容文化，旧式职人与当下精神之传承，及电影对此的处理与期待。</small></p>
+<p>「《一代宗师》有白玫瑰理发厅，西门町有台北红玫瑰理发厅，但那些都是上海式，阿蕊学的，则是源自日本的美容院系统⋯⋯」</p><p>特约撰稿人 孙志熙 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230315-culture-day-off-movie-taichung/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/9007b5bd48b142bc816f05d6c1dff04b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月27日，台中，阿蕊理发店，阿蕊为黄先生剪发。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2023年2月27日，台中，阿蕊理发店，阿蕊为黄先生剪发。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p><small>【编者按】正在上映的台湾电影《本日公休》，讲述了台中一家经营四十载的男士家庭理发厅的故事。故事带出台湾独有的“理容院”文化，其由历史环境，而综合了中、日、欧混血的理容传统。我们访问了电影主人公的原型人物——今年74岁的理发师阿蕊（导演傅天余之母），连并影片的导演与美术指导，共同谈谈台式理容文化，旧式职人与当下精神之传承，及电影对此的处理与期待。</small></p>
 <p>定期上一趟发型沙龙是现代人生活必须，但在过去，打理仪容的场所男女有别。在台湾，“理容院”专指服务男士的场所，上世纪1960、1970年代是其全盛时期。作为一种台湾独特的文化，“理容院”历经清代与日治时期，融合了中国、日本、欧洲三者的基因，加之常年浸润的台湾在地风格，揉合出一种独特的混血文化。旧式的理容院，向宾客提供掏耳、修面、理发等服务，有些店家还加入修甲或指压按摩。</p>
 <p>近些年复古风潮盛行，“理容院”也被纳入其中成为一种台式美学，近年有理容院二代创办<a href="https://www.taiwanbarbershoptravel.com/">“理容院城市旅行”</a>，推广台南老店及在地文化，也有潮流品牌如“香兰男子电棒烫”，将老商标活化再造，凝聚了一群台味理容院的年轻爱好者。待1980年代末，现代化发廊开始在台湾普及，理容院遂逐渐式微后，承袭自传统的手艺也开枝散叶，进入寻常巷弄间，落定于一间间个人经营的家庭理发。</p>
 <blockquote>
@@ -131,7 +131,7 @@ author: 特约撰稿人 安卓 发自台北
 </p><figcaption itemprop="caption">《本日公休》剧照。<span class="credit">图：威视电影提供</span></figcaption><p></p><p>
 </p><p>所谓上海派，是把上海租界原汁原味的欧美派理容移植过来；而日本在发展理发院的过程中，并未把自己文化的底蕴丢掉，而是融合，就像日式咖哩的和洋风，而那就是台味理发店传承到的氛围。</p>
 <p></p><p>台湾理容院主要分成上海派──像《一代宗师》里的“白玫瑰理发厅”和西门町的“台北红玫瑰理发厅”，是以男师傅为主；妈妈阿蕊学的，则源自日本美容院系统，两边师傅讲的语言、制服样式和调调都很不同。</p><p>曾在《一代宗师》任副美术指导的王志成补充，所谓上海派，是把上海租界原汁原味的欧美派理容移植过来；而日本在发展理发院的过程中，并未把自己文化的底蕴丢掉，而是融合，就像日式咖哩的和洋风，而那就是台味理发店传承到的氛围。</p><p>《今日公休》电影也重现了胜美的员工宿舍，王志成考究过一些老片如《街头巷尾》，再根据跑过很多老场景的经验，打造出1960年代的室内装设，把通铺设计成类似炕床的样式，墙壁重新刷过后，再用当年工法以手工印上花纹，阿蕊近一甲子前的记忆、少女对未来的想望，就这么活了起来。</p><p><a class="image" href="https://theinitium.com/article/20230315-culture-day-off-movie-taichung/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/330b623258a747849edc7614ba296bbe.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《本日公休》剧照。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">《本日公休》剧照。 <span class="credit">图：威视电影提供</span></figcaption><p></p><p>Header2</p><p>
+</p><figcaption itemprop="caption">《本日公休》剧照。 <span class="credit">图：威视电影提供</span></figcaption><p></p><p>与发廊之别</p><p>
 </p><p>家庭理发不会像发廊一次性装潢成一个调子，而应该是先做了一处装修，过几年又弄一下别的，或是戏中拍片的女儿拿回来一盏漂亮的灯，东西有新有旧，时间痕迹是不一致的。</p>
 <p></p><p>经过导演和阿蕊的双重证实，电影里，理发阿姨和客人的所有话题和互动，都是真有其事，既然自家理发店就是故事原生地，那么回家拍这部片也很顺理成章吧？事实却刚好相反，傅天余一直极力避免工作生活互相干扰，但要找到一个能借那么长时间，又具生活感的实景，她心里也知道难度很高。</p><p>直到某天制片组问她，老家理发店就是现成场景，真的不考虑吗？她先问妈妈，没想到阿蕊一口答应，加上跟街坊邻居的好交情，一切都好打点；和摄影美术实际勘景后，也确认拍摄上是好操作的，她才放下纠结，就在老家开拍吧。</p><p>筹备加拍摄的三个月间，原以为妈妈可以借机休假，没想到她根本闲不下来，直接请场景对面的美术办公室张罗出一个角落，让她继续帮客人理发；美术设计上的构想，是店面改造后可以继续营业使用，所以采取装潢而非搭景的思考，加入主人的要求和意见，确保美观实用兼具。</p><p>场景内少数的几项改变，包括原本间隔店面和住家空间的是铝门窗，美术将之改成品相较好的木拉门，除了增添温润度，也补强主角念旧的特质；水槽整座打掉，用复杂的工法新砌，为营造岁月感，原想刻意敲破几个角，但考虑到妈妈未来还要使用，只好放弃，改成手工画上裂痕；地板整修成磨石子地，空间中的木头质感搭配绿和咖啡色磁砖，整体氛围就非常台湾。</p><p><a class="image" href="https://theinitium.com/article/20230315-culture-day-off-movie-taichung/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/6dfe15387ede4f0e93029e97833c0227.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月27日，台中，阿蕊理发店，阿蕊为老邻长何先生剪发。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2023年2月27日，台中，阿蕊理发店，阿蕊为老邻长何先生剪发。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>
