--- a/_posts/2023-03-16-INMEDIA-被指咬斷警察手指囚5年半-杜啟華上訴遭駁回.html
+++ b/_posts/2023-03-16-INMEDIA-被指咬斷警察手指囚5年半-杜啟華上訴遭駁回.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/03161508-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年7月14日沙田新城市廣場爆發警民衝突，港大畢業生杜啟華被指蓄意咬斷警長手指及揮打雨傘致高級警司手臂骨折。經審訊被裁定有意圖而傷人、對他人身體加以嚴重傷害、襲警及公眾地方擾亂秩序罪成，判囚5年半。他就其中兩項控罪提出定罪上訴，今早（16日）出席上訴庭聆訊。上訴方指透過影片可見，杜啟華被3名警察向後拖拉、按壓頭部和臉部，不能在少於1秒時間內，隔著口罩意識到伸進口中的物品是警察手指，咬噬是因受到外界影響而作出的反射動作。上訴庭法官彭寶琴質疑杜啟華原審時未有出庭作供，缺乏證據支持說法，最終拒絕批出上訴許可，將於3個月內頒布書面理由。</p>
+<img src="https://www.inmediahk.net/files/column_images/03161508-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年7月14日沙田新城市廣場爆發警民衝突，港大畢業生杜啟華被指蓄意咬斷警長手指及揮打雨傘致高級警司手指骨折。經審訊被裁定有意圖而傷人、對他人身體加以嚴重傷害、襲警及公眾地方擾亂秩序罪成，判囚5年半。他就其中兩項控罪提出定罪上訴，今早（16日）出席上訴庭聆訊。上訴方指透過影片可見，杜啟華被3名警察向後拖拉、按壓頭部和臉部，不能在少於1秒時間內，隔著口罩意識到伸進口中的物品是警察手指，咬噬是因受到外界影響而作出的反射動作。上訴庭法官彭寶琴質疑杜啟華原審時未有出庭作供，缺乏證據支持說法，最終拒絕批出上訴許可，將於3個月內頒布書面理由。</p>
 <p>上訴人杜啟華（現26歲）已服刑2年，今由資深大律師彭耀鴻代表。律政司由副刑事檢控專員、資深大律師譚耀豪代表。案件由上訴庭法官彭寶琴審理。</p>
 <p><strong>官：若以「非自主行為」作辯護理由 被告理應作供</strong></p>
 <p>甫開庭，彭官要求先處理蓄意傷人控罪，涉及咬斷警長手指。她引述上訴方的書面陳詞，當中投訴原審法官陳仲衡「搞錯被告辯護方向」，即被告說法從來不是案發時作出「非自主行為」，但控方依然有責任舉證，去證明被告有犯案的特定意識（specific intent）。但彭官認為，一般情況下控方會推定被告犯案有特定意識，若果辯方反對此推定，舉證責任就落在辯方身上。</p>
@@ -23,7 +23,7 @@ author: 獨媒報導
 <p>彭耀鴻又指事件歷時短促，惟法官隨即指很多襲擊都發生在電光火石之間，殺人、捅一刀也能在短時間內發生。</p>
 <p><strong>上訴方：未能證0.66秒內知道口中物品是警察手指</strong></p>
 <p>法官查問，如果上訴人不知放進口中的物品是什麼，「咁點解要咬？」若果有人塞物品入他口，不理是一塊石頭、海綿、人的手指或是鐵柱，「佢係唔係都咬咗先？」彭耀鴻則指，控方須證明被告知道放進口中的是警察手指，才能建立被告有傷人的意圖；然而控方未能證明被告在0.66秒時間內知道入口的物件是什麼，從而作出傷害警察的動作。他指要證明蓄意傷人控罪，魯莽是不足夠，控方必須證明被告有特定意圖導致他人身體受嚴重傷害，若果獲批出上訴許可，冀可改判較輕的「傷人19」。</p>
-<p>至於另一項傷人罪，涉及揮打雨傘導致高級警司梁子健手臂骨折。彭耀鴻指原審法官過份地考慮警司的復原時間，從而裁定他的傷勢屬「嚴重傷害」。法官則指精神傷害在法律上也可構成「嚴重身體傷害」。</p>
+<p>至於另一項傷人罪，涉及揮打雨傘導致高級警司梁子健手指骨折。彭耀鴻指原審法官過份地考慮警司的復原時間，從而裁定他的傷勢屬「嚴重傷害」。法官則指精神傷害在法律上也可構成「嚴重身體傷害」。</p>
 <p>法官彭寶琴最終宣布，由於兩項控罪的上訴理由，不論獨立或綜合來看，都沒有合理可爭辯的機會，故拒絕批出上訴許可。</p>
 <p>杜啟華身穿藍色西裝，由囚車送往法院應訊，他體型略微消瘦，聆訊期間在被告欄內不斷抄寫。散庭後，杜啟華向旁聽席上的親友們攤開雙手及聳肩。</p>
 <p>控罪指，杜啟華於2019年7月14日在沙田新城市廣場第一期的公眾地方作出擾亂秩序的行為；另指他在L3層襲擊執行職責的警員葉卓軒；非法及惡意地對高級警司梁子健的身體加以嚴重傷害；以及意圖使偵緝警長梁啟業的身體受嚴重傷害而非法及惡意地傷害他。</p>
