--- a/_posts/2023-03-16-INMEDIA-黎智英子籲聯合國關注案件兼助獲釋-港府-絕不容許干預司法.html
+++ b/_posts/2023-03-16-INMEDIA-黎智英子籲聯合國關注案件兼助獲釋-港府-絕不容許干預司法.html
@@ -13,4 +13,5 @@ author: 獨媒報導
 <p>在會上亦有國際記者聯盟和國際筆會發言聲援，呼籲香港政府撤銷對黎智英、記者和媒體工作者的起訴，指新聞工作不是犯罪。</p>
 <p>港府昨發聲明反駁指，黎崇恩及該國際律師團隊肆意抹黑《香港國安法》和香港特區司法制度，並濫用聯合國機制，尋求聯合國人權理事會對黎智英涉及《香港國安法》案件的司法程序進行干預，對此表示強烈不滿和堅決反對。 </p>
 <p>特區政府強調，香港特區律政司在《基本法》第63條的保障下主管刑事檢控工作，不受任何干涉，而刑事罪行的被告人，在《基本法》和《香港人權法案》的保障下，均會由享有獨立審判權的司法機關進行公平審訊。在所有刑事案件審訊中，控方必須舉證達致毫無合理疑點的標準，香港特區法院才可將被告人定罪。發言人又稱，被告人亦有法律保障下的上訴權利。</p>
+<p>另外美國參議員有超過40名議員共同發起一項決議案，促美國政府對中國鎮壓香港異見者的行為做出有力回應。議案獲得通過，但對政府沒有約束力，僅作參考用途。不過港府今傍晚發表過千字聲明反擊，批評決議案「大放厥詞和污衊抹黑」，港府表示強烈不滿和堅決反對。</p>
 </div></div></div>
